src/sample/Errors/C0077.st
// C0077: Unknown type: '{type}'
FUNCTION_BLOCK FB_C0077
    
    VAR
        _a: UnknownType;
    END_VAR
END_FUNCTION_BLOCK